# ericchat

./: .gitignore  MANIFEST.in  README.md  __main__.py  pyproject.toml  requirements.txt
ericchat/: __init__.py  __main__.py  app.py  eric_state.py
ericchat/message_html/: __init__.py  full.py
ericchat/resources/: icon.icns
ericchat/style/: __init__.py  colours.py
ericchat/util/: __init__.py  available_memory.py  available_models.py  chat_message.py  download_model.py  get_mlx.py  notices.py  tps.py
